# ImageGen

./: .gitignore  CONTRIBUTING.md  ImageGen.lnk  LICENSE  README.md  README.zh-CN.md  SKILL.md  config.example.json  pyproject.toml  remove_chroma_key.py  setup.bat  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
clipboard_image_component/: index.html
imagegen/: app.py  chroma_key.py  core.py  history.py
references/: cli.md  image-api.md  prompting.md  sample-prompts.md
