[project]
name = "imagegen"
version = "0.1.0"
description = "Local image generation console with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.37.0",
    "pillow>=12.2.0",
    "streamlit>=1.57.0",
]

[tool.setuptools.packages.find]
include = ["imagegen*"]

[project.scripts]
imagegen = "imagegen.app:main"
